--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ machine-learning-ex3/ex3/token.mat
 machine-learning-ex4/ex4/token.mat
 
 machine-learning-ex5/ex5/token.mat
+
+machine-learning-ex7/ex7/octave-workspace
+
+machine-learning-ex7/ex7/token.mat
